2005-04-04  Eric Anholt  <anholt@FreeBSD.org>

	* .cvsignore:
	* configure.ac:
	* libswfdec/Makefile.am:
	* libswfdec/actions.c:
	* libswfdec/actions_builtin.c:
	* libswfdec/actions_tags.c:
	* libswfdec/js/.cvsignore:
	* libswfdec/js/INTEGRATION:
	* libswfdec/js/Makefile.am:
	* libswfdec/js/js.c:
	* libswfdec/js/js.msg:
	* libswfdec/js/jsapi.c:
	* libswfdec/js/jsapi.h:
	* libswfdec/js/jsarena.c:
	* libswfdec/js/jsarena.h:
	* libswfdec/js/jsarray.c:
	* libswfdec/js/jsarray.h:
	* libswfdec/js/jsatom.c:
	* libswfdec/js/jsatom.h:
	* libswfdec/js/jsautocfg.h:
	* libswfdec/js/jsbit.h:
	* libswfdec/js/jsbool.c:
	* libswfdec/js/jsbool.h:
	* libswfdec/js/jsclist.h:
	* libswfdec/js/jscntxt.c:
	* libswfdec/js/jscntxt.h:
	* libswfdec/js/jscompat.h:
	* libswfdec/js/jsconfig.h:
	* libswfdec/js/jscpucfg.c:
	* libswfdec/js/jscpucfg.h:
	* libswfdec/js/jsdate.c:
	* libswfdec/js/jsdate.h:
	* libswfdec/js/jsdbgapi.c:
	* libswfdec/js/jsdbgapi.h:
	* libswfdec/js/jsdhash.c:
	* libswfdec/js/jsdhash.h:
	* libswfdec/js/jsdtoa.c:
	* libswfdec/js/jsdtoa.h:
	* libswfdec/js/jsemit.c:
	* libswfdec/js/jsemit.h:
	* libswfdec/js/jsexn.c:
	* libswfdec/js/jsexn.h:
	* libswfdec/js/jsfile.c:
	* libswfdec/js/jsfile.h:
	* libswfdec/js/jsfun.c:
	* libswfdec/js/jsfun.h:
	* libswfdec/js/jsgc.c:
	* libswfdec/js/jsgc.h:
	* libswfdec/js/jshash.c:
	* libswfdec/js/jshash.h:
	* libswfdec/js/jsinterp.c:
	* libswfdec/js/jsinterp.h:
	* libswfdec/js/jslibmath.h:
	* libswfdec/js/jslock.c:
	* libswfdec/js/jslock.h:
	* libswfdec/js/jslog2.c:
	* libswfdec/js/jslong.c:
	* libswfdec/js/jslong.h:
	* libswfdec/js/jsmath.c:
	* libswfdec/js/jsmath.h:
	* libswfdec/js/jsnum.c:
	* libswfdec/js/jsnum.h:
	* libswfdec/js/jsobj.c:
	* libswfdec/js/jsobj.h:
	* libswfdec/js/jsopcode.c:
	* libswfdec/js/jsopcode.h:
	* libswfdec/js/jsopcode.tbl:
	* libswfdec/js/jsosdep.h:
	* libswfdec/js/jsotypes.h:
	* libswfdec/js/jsparse.c:
	* libswfdec/js/jsparse.h:
	* libswfdec/js/jsprf.c:
	* libswfdec/js/jsprf.h:
	* libswfdec/js/jsprvtd.h: